--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
              <div id = "line"></div>
              <p><b>Created By:</b> &nbsp Jon Ringenberg 2022 &nbsp <b>Thesis:</b>  &nbsp
                <a href = "https://www.proquest.com/openview/b2d3ade74d9bd5377a9f84e75a3337aa/1?pq-origsite=gscholar&cbl=18750&diss=y">ProQuest</a></p>
-             <p>Deployed Using AWS Elastic Beanstalk</p>
+             <p>Deployed Using AWS Amplify</p>
         </center>
        </div>
 
