--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <center>
           <h2>Comfort Zone</h2>
           <div id = "line3"></div>
-          <div><p class = "subInfo">Langauges I code in daily</p></div>
+          <div><p class = "subInfo">Langauges I use daily</p></div>
           <br>
           <img  class = "jlogos" src = "logos/JAVA.png">
           <br><br><br>
