--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
      <link rel = "stylesheet" href = "jonStyle.css">
      <link rel = "stylesheet" href = "bootstrap.min.css">
-     <!--<script src = "bootstrap.min.js"></script>-->
-     <!--<script src = "jQuery.js"></script>-->
+     <script src = "bootstrap.min.js"></script>
+     <script src = "jQuery.js"></script>
   </head>
 
   <body>
@@ -86,7 +86,7 @@
           <br>
           <img  class = "clogos" src = "logos/C.png">
           <br><br><br>
-          <img  class = "clogos"src = "logos/C++.png">
+          <img  class = "clogos"src = "logos/CPlusPlus.png">
           <br><br><br>
           <img class = "hlogos" src = "logos/PYTHON.png">
           <br><br><br>
