--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          <center>
           <h1>Jon Ringenberg</h1>
           <div id = "line2"></div>
+            <div>
+              <h2>My Projects</h2>
+            </div
           <br>
             <h3>Machine Learning Algorithm Project</h3>
             <p class = "info">
