--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <head>
      <link rel = "stylesheet" href = "jonStyle.css">
      <link rel = "stylesheet" href = "bootstrap.min.css">
-     <script src = "bootstrap.min.js"></script>
-     <script src = "jQuery.js"></script>
+     <script src = "bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
