--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
        <div class="col-sm-8 order-sm-2" >
          <center>
           <h1>Jon Ringenberg</h1>
+            <h2>&#8226 My Projects &#8226</h2>
           <div id = "line2"></div>
-            <div>
-              <h2>My Projects</h2>
-            </div
           <br>
             <h3>Machine Learning Algorithm Project</h3>
             <p class = "info">
