--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
      <link rel = "stylesheet" href = "jonStyle.css">
      <link rel = "stylesheet" href = "bootstrap.min.css">
-     <script src = "bootstrap.bundle.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </head>
 
   <body>
