--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h4>&#8226 My Projects &#8226</h4>
          
           <br>
-            <h3>Machine Learning Project</h3>
+            <h3 id = "exOne">Machine Learning Project</h3>
             <p class = "info">
               A car uses ML to make driving decisions on a track.
               <br>
