--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel = "stylesheet" href = "jonStyle.css">
      <link rel = "stylesheet" href = "bootstrap.min.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
-   
+     <script src = "JQ.js"></script>
+     <script src = "links.js"></script>
   </head>
 
   <body>
