--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href = "https://github.com/jwringenberg/car">GitHub Link</a>
             </p>
         <div id = "line"></div>
-            <h3>Memory Test Program</h3>
+            <h3 id = "exTwo">Memory Test Program</h3>
             <p class = "info">
               Can you remember the order before it disappears?
               <br>
@@ -43,7 +43,7 @@
             </p>
           <div id = "line"></div>
           <p>
-            <h3>Help-Ticket System</h3>
+            <h3 id = "exThree">Help-Ticket System</h3>
             <p class = "info">
               A project I helped create in my software engineering class.
               <br>
