--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel = "stylesheet" href = "jonStyle.css">
      <link rel = "stylesheet" href = "bootstrap.min.css">
+     <link rel = "stylesheet" href = "jonStyle.css">
      <script src = "JQ.js"></script>
      <script src = "links.js"></script>
   </head>
@@ -57,6 +57,7 @@
              <div id = "line"></div>
              <p><b>Created By:</b> &nbsp Jon Ringenberg 2022 &nbsp <b>Thesis:</b>  &nbsp
                <a href = "https://www.proquest.com/openview/b2d3ade74d9bd5377a9f84e75a3337aa/1?pq-origsite=gscholar&cbl=18750&diss=y">ProQuest</a></p>
+             <p><b>Email:</b> jonathanringenberg@gmail.com</p>
              <p>Deployed Using AWS Amplify</p>
         </center>
        </div>
