--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <link rel = "stylesheet" href = "bootstrap.min.css">
      <link rel = "stylesheet" href = "jonStyle.css">
      <script src = "JQ.js"></script>
-     <!--<script src = "links.js"></script>-->
+     <script src = "links.js"></script>
   </head>
 
   <body>
