--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel = "stylesheet" href = "bootstrap.min.css">
      <link rel = "stylesheet" href = "jonStyle.css">
-     <script src = "JQ.js"></script>
+     <script src = "jquery.min.js"></script>
      <script src = "links.js"></script>
   </head>
 
