--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <br>
               Presented in a poster session at SIGCSE! (Java)
             </p>
-            <video class = "preview" src="videos/CarLab.mp4"></video>
+            <img class = "preview" src="videos/CarLab.gif">
             <p>
               <a href = "https://sigcse2019.sigcse.org/docs/SIGCSE_2019_Program.pdf"> SIGCSE 2019 Program</a>
               &nbsp&nbsp&nbsp
