--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
               <br>
               Presented in a poster session at SIGCSE! (Java)
             </p>
-            <img class = "preview" src="videos/CarLab.gif">
+             <!--<img class = "preview" src="videos/CarLab.gif">-->
+             <video class = "preview" src="videos/CarLab.mp4"></video>
             <p>
               <a href = "https://sigcse2019.sigcse.org/docs/SIGCSE_2019_Program.pdf"> SIGCSE 2019 Program</a>
               &nbsp&nbsp&nbsp
               <a href = "https://github.com/jwringenberg/car">GitHub Link</a>
             </p>
-        <div id = "line"></div>
+            <div id = "line"></div>
             <h3 id = "exTwo">Memory Test Program</h3>
             <p class = "info">
               Can you remember the order before it disappears?
